[gd_scene load_steps=16 format=2]

[ext_resource path="res://objects/UI/battle/UnitGUI.gd" type="Script" id=1]
[ext_resource path="res://assets/images/ui/unit/AP_Mage.png" type="Texture" id=2]
[ext_resource path="res://resources/themes/custom/new_theme2.tres" type="Theme" id=3]
[ext_resource path="res://assets/images/ui/unit/UnitBG.png" type="Texture" id=4]
[ext_resource path="res://resources/fonts/GUI_Font.tres" type="DynamicFont" id=5]
[ext_resource path="res://resources/fonts/GUI_Font_16.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/images/ui/unit/Deflect.png" type="Texture" id=7]
[ext_resource path="res://assets/images/ui/unit/Block.png" type="Texture" id=8]
[ext_resource path="res://resources/fonts/GUI_Font_14.tres" type="DynamicFont" id=9]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/HP_Bar_Big_Under.png-67a151e6ac3037651b5c06c6774dfe74.stex"

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/HP_Bar_Big.png-db741ed0bb43223f73dd5c81a3a133f9.stex"

[sub_resource type="DynamicFontData" id=3]
font_path = "res://resources/fonts/Fenix-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="Theme" id=5]
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 4 )
Label/styles/normal = null

[sub_resource type="StreamTexture" id=6]
flags = 4
load_path = "res://.import/Deck_Icon.png-ed29caf90732094b920a7456cbd00209.stex"

[node name="UnitGUI" type="Control"]
margin_right = 256.0
margin_bottom = 177.0
rect_min_size = Vector2( 256, 177 )
mouse_filter = 2
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="UnitBG" type="Sprite" parent="."]
modulate = Color( 0.85098, 0.811765, 0.729412, 0.329412 )
texture = ExtResource( 4 )
centered = false

[node name="AP" type="Sprite" parent="."]
position = Vector2( 236, 20 )
texture = ExtResource( 2 )

[node name="AP_Label" type="Label" parent="AP"]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 1
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
text = "2/3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP_Bar" type="TextureProgress" parent="."]
margin_left = 2.0
margin_top = 26.0
margin_right = 194.0
margin_bottom = 46.0
value = 100.0
texture_under = SubResource( 1 )
texture_progress = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP_Label" type="Label" parent="HP_Bar"]
margin_right = 190.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "100/120"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitName" type="Label" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 174.0
margin_bottom = 25.0
rect_min_size = Vector2( 172, 0 )
theme = SubResource( 5 )
text = "Swooni"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="."]
margin_left = 176.0
margin_top = 2.0
margin_right = 216.0
margin_bottom = 25.0
hint_tooltip = "This unit's current level."
mouse_filter = 1
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Lv. "
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Label" parent="."]
margin_left = 96.0
margin_top = 56.0
margin_right = 148.0
margin_bottom = 75.0
hint_tooltip = "The number of spaces this unit can move."
mouse_filter = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Move:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump" type="Label" parent="."]
margin_left = 96.0
margin_top = 80.0
margin_right = 140.0
margin_bottom = 99.0
hint_tooltip = "The height this unit can jump."
mouse_filter = 1
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Jump:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="Label" parent="."]
margin_left = 96.0
margin_top = 104.0
margin_right = 143.0
margin_bottom = 125.0
hint_tooltip = "Determines the turn initiative for each round."
mouse_filter = 1
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Speed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhysEvade" type="Label" parent="."]
margin_left = 96.0
margin_top = 128.0
margin_right = 201.0
margin_bottom = 149.0
hint_tooltip = "The chance of evading physical attacks."
mouse_filter = 1
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Phys Evade %:"

[node name="MagEvade" type="Label" parent="."]
margin_left = 96.0
margin_top = 152.0
margin_right = 197.0
margin_bottom = 173.0
hint_tooltip = "The chance of evading magic attacks."
mouse_filter = 1
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Mag Evade %:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deck_Icon" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -33.0
margin_right = -8.0
margin_bottom = -9.0
hint_tooltip = "View this unit's deck and stats."
mouse_default_cursor_shape = 2
texture_normal = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Block" type="TextureRect" parent="."]
margin_left = 224.0
margin_top = 45.0
margin_right = 248.0
margin_bottom = 69.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Block"]
margin_right = 24.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "9"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deflect" type="TextureRect" parent="."]
margin_left = 224.0
margin_top = 72.0
margin_right = 248.0
margin_bottom = 96.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Deflect"]
margin_right = 24.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "9"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Deck_Icon" to="." method="_on_Deck_Icon_pressed"]
